@@ -269,7 +269,8 @@ extern void owl_fmtext_append_reversebold(owl_fmtext *f, char *text);
 extern void owl_fmtext_addattr(owl_fmtext *f, int attr);
 extern void owl_fmtext_colorize(owl_fmtext *f, int color);
 extern void owl_fmtext_append_ztext(owl_fmtext *f, char *text);
-extern void owl_fmtext_append_fmtext(owl_fmtext *f, owl_fmtext *in, int start, int stop);
+extern void _owl_fmtext_append_fmtext(owl_fmtext *f, owl_fmtext *in, int start, int stop);
+extern void owl_fmtext_append_fmtext(owl_fmtext *f, owl_fmtext *in);
 extern void owl_fmtext_append_spaces(owl_fmtext *f, int nspaces);
 extern void owl_fmtext_append_list(owl_fmtext *f, owl_list *l, char *join_with, char *(format_fn)(void*));
 extern char *owl_fmtext_print_plain(owl_fmtext *f);
@@ -579,6 +580,7 @@ extern int owl_mainwin_get_last_msg(owl_mainwin *mw);
 extern void owl_message_init(owl_message *m);
 extern void owl_message_set_attribute(owl_message *m, char *attrname, char *attrvalue);
 extern char *owl_message_get_attribute_value(owl_message *m, char *attrname);
+extern void owl_message_attributes_tofmtext(owl_message *m, owl_fmtext *fm);
 extern owl_fmtext *owl_message_get_fmtext(owl_message *m);
 extern void owl_message_set_class(owl_message *m, char *class);
 extern char *owl_message_get_class(owl_message *m);
@@ -596,6 +598,10 @@ extern void owl_message_set_body(owl_message *m, char *body);
 extern char *owl_message_get_body(owl_message *m);
 extern void owl_message_set_opcode(owl_message *m, char *opcode);
 extern char *owl_message_get_opcode(owl_message *m);
+extern void owl_message_set_isloginout(owl_message *m);
+extern int owl_message_is_loginout(owl_message *m);
+extern void owl_message_set_isprivate(owl_message *m);
+extern int owl_message_is_private(owl_message *m);
 extern char *owl_message_get_timestr(owl_message *m);
 extern void owl_message_set_type_admin(owl_message *m);
 extern void owl_message_set_type_zephyr(owl_message *m);
@@ -622,11 +628,9 @@ extern ZNotice_t *owl_message_get_notice(owl_message *m);
 extern char *owl_message_get_hostname(owl_message *m);
 extern void owl_message_curs_waddstr(owl_message *m, WINDOW *win, int aline, int bline, int acol, int bcol, int color);
 extern int owl_message_is_personal(owl_message *m);
-extern int owl_message_is_to_me(owl_message *m);
 extern int owl_message_is_from_me(owl_message *m);
 extern int owl_message_is_mail(owl_message *m);
 extern int owl_message_is_ping(owl_message *m);
-extern int owl_message_is_login(owl_message *m);
 extern int owl_message_is_burningears(owl_message *m);
 extern char *owl_message_get_cc(owl_message *m);
 extern int owl_message_get_id(owl_message *m);
